log

Wed 13 Mar 2024 08:46:56 PM UTC: 
 exercises.c | 66 ++++++++++++++++++++++++++++++++++++++++++++++++++++++++-----
 1 file changed, 61 insertions(+), 5 deletions(-)
 tests:  0|4
total_score: 30/70
2aa4f8a
Wed 13 Mar 2024 08:51:24 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 20/70
a57ff64
Wed 13 Mar 2024 09:14:02 PM UTC: 
 exercises.c | 69 +++++++++++++++++++++++++++++++++++++++++++++++++++++--------
 1 file changed, 60 insertions(+), 9 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:181:9: error: unused variable ‘lista’ [-Werror=unused-variable]
  181 |   Nodo *lista = NULL;
      |         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
f0fba4e
Wed 13 Mar 2024 09:14:21 PM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
test.c:37:24: error: unknown type name ‘Nodo’
   37 | void print_linked_list(Nodo* lista) {
      |                        ^~~~
test.c: In function ‘test_crearListaEnlazada’:
test.c:331:5: error: unknown type name ‘Nodo’
  331 |     Nodo* lista = crearListaEnlazada(arr, size);
      |     ^~~~
test.c:331:19: error: implicit declaration of function ‘crearListaEnlazada’; did you mean ‘test_crearListaEnlazada’? [-Werror=implicit-function-declaration]
  331 |     Nodo* lista = crearListaEnlazada(arr, size);
      |                   ^~~~~~~~~~~~~~~~~~
      |                   test_crearListaEnlazada
test.c:331:19: error: initialization of ‘int *’ from ‘int’ makes pointer from integer without a cast [-Werror=int-conversion]
test.c:333:5: error: unknown type name ‘Nodo’
  333 |     Nodo* current = lista;
      |     ^~~~
test.c:336:37: error: request for member ‘numero’ in something not a structure or union
  336 |       if (current == NULL || current->numero != arr[i]) {
      |                                     ^~
test.c:339:9: error: implicit declaration of function ‘print_linked_list’ [-Werror=implicit-function-declaration]
  339 |         print_linked_list(lista);
      |         ^~~~~~~~~~~~~~~~~
test.c:343:11: error: unknown type name ‘Nodo’
  343 |           Nodo* temp = lista;
      |           ^~~~
test.c:344:24: error: request for member ‘siguiente’ in something not a structure or union
  344 |           lista = lista->siguiente;
      |                        ^~
test.c:349:24: error: request for member ‘siguiente’ in something not a structure or union
  349 |       current = current->siguiente;
      |                        ^~
test.c:360:9: error: unknown type name ‘Nodo’
  360 |         Nodo* temp = lista;
      |         ^~~~
test.c:361:22: error: request for member ‘siguiente’ in something not a structure or union
  361 |         lista = lista->siguiente;
      |                      ^~
test.c:369:7: error: unknown type name ‘Nodo’
  369 |       Nodo* temp = lista;
      |       ^~~~
test.c:370:20: error: request for member ‘siguiente’ in something not a structure or union
  370 |       lista = lista->siguiente;
      |                    ^~
cc1: all warnings being treated as errors
Compilation failed
dd1c106
Wed 13 Mar 2024 09:14:49 PM UTC: 
 exercises.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
In file included from test.c:1:
exercises.c: In function ‘crearListaEnlazada’:
exercises.c:191:1: error: control reaches end of non-void function [-Werror=return-type]
  191 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
115d923
Wed 13 Mar 2024 09:15:03 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|3
total_score: 40/70
cd82962
Wed 13 Mar 2024 09:17:56 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘mergeSortedArrays’:
exercises.c:79:9: error: statement with no effect [-Werror=unused-value]
   79 |   result[size3];
      |   ~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
561f911
Wed 13 Mar 2024 09:18:20 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|3
total_score: 40/70
b9be45c
